Allow www.firefox.com calls without a trailing slash but with a querystring

--- a/data/allowlist-mozorg.yaml
+++ b/data/allowlist-mozorg.yaml
@@ -16,7 +16,7 @@ allowed_outbound_url_regexes:
   # === Mozilla-run things ===
   - '^https?:\/\/[^\/]+.mozilla.org($|\/(.*))'
   - '^https?:\/\/[^\/]+.mozilla.com($|\/(.*))'
-  - '^https?:\/\/[^\/]+.firefox.com($|\/(.*))'
+  - '^https?:\/\/[^\/]+.firefox.com($|\?(.*)|\/(.*))'
 
   - '^https?:\/\/[^\/]+.mozilla.design($|\/(.*))'
   - '^https?:\/\/(www\.){0,1}mozillians.org($|\/(.*))'
