--- a/.github/workflows/firefox-site-scanning.yaml
+++ b/.github/workflows/firefox-site-scanning.yaml
@@ -2,26 +2,25 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at https://mozilla.org/MPL/2.0/.
 
-# If you rename this workflow, make sure you update the name in the workflow_run
-# ref in mozorg-cdn-ge-code-check.yaml
-name: "www.mozilla.org site scanning"
+name: "Firefox site scanning"
+
 on:
   push:
     branches-ignore:
       - "dependabot/**"
   workflow_dispatch:
   schedule:
-    - cron: "32 2,14 * * *" # 02:32 UTC and 14:32 every day
+    - cron: "17 3,15 * * *" # 03:17 UTC and 15:17 every day
 
 env:
   SENTRY_DSN: https://45ad5d426da7480081831c053ca02cac@o1069899.ingest.sentry.io/6249535
   SLACK_NOTIFICATION_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFICATION_WEBHOOK_URL }}
-  MOZORG_CDN_HOSTNAME: ${{ secrets.MOZORG_CDN_HOSTNAME }}
-  MOZORG_US_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}
-  MOZORG_EU_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}
+  FXC_CDN_HOSTNAME: ${{ secrets.FXC_CDN_HOSTNAME }}
+  FXC_US_ORIGIN_HOSTNAME: ${{ secrets.FXC_US_ORIGIN_HOSTNAME }}
+  FXC_EU_ORIGIN_HOSTNAME: ${{ secrets.FXC_EU_ORIGIN_HOSTNAME }}
   MEAO_IDENTITY_EMAIL: ${{ secrets.MEAO_IDENTITY_EMAIL }}
-  ALLOWLIST_FILEPATH: data/allowlist-mozorg.yaml
-  EXTRA_URLS_FILEPATH: data/extra-urls-mozorg.yaml
+  ALLOWLIST_FILEPATH: data/allowlist-firefox.yaml
+  EXTRA_URLS_FILEPATH: data/extra-urls-firefox.yaml
   USER_AGENT: Mozilla/5.0 (Automated; https://github.com/mozmeao/www-site-checker) CheckerBot/1.0
 
 jobs:
@@ -30,7 +29,7 @@ jobs:
       matrix:
         batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
     runs-on: ubuntu-latest
-    name: Check main CDN - batch ${{ matrix.batch }}
+    name: Check Firefox CDN - batch ${{ matrix.batch }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -41,19 +40,19 @@ jobs:
       - name: Run checker
         run: >
           python bin/scan_site.py
-          --sitemap-url="https://${{ secrets.MOZORG_CDN_HOSTNAME }}/all-urls.xml"
+          --sitemap-url="https://${{ secrets.FXC_CDN_HOSTNAME }}/all-urls.xml"
           --batch="${{ matrix.batch }}"
           --export-cache
       - name: Upload scan output files
         uses: actions/upload-artifact@v4
         with:
-          name: scan-results-${{ matrix.batch }}-CDN
+          name: scan-results-${{ matrix.batch }}-firefox-CDN
           path: output
           retention-days: 15
       - name: Upload page-cache
         uses: actions/upload-artifact@v4
         with:
-          name: html-cache-${{ matrix.batch }}
+          name: html-cache-firefox-${{ matrix.batch }}
           path: page_cache
           retention-days: 5
 
@@ -62,7 +61,7 @@ jobs:
       matrix:
         batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
     runs-on: ubuntu-latest
-    name: Check US origin server - batch ${{ matrix.batch }}
+    name: Check Firefox US origin server - batch ${{ matrix.batch }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -73,13 +72,13 @@ jobs:
       - name: Run checker
         run: >
           python bin/scan_site.py
-          --sitemap-url="https://${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}/all-urls.xml"
+          --sitemap-url="https://${{ secrets.FXC_US_ORIGIN_HOSTNAME }}/all-urls.xml"
           --maintain-hostname
           --batch="${{ matrix.batch }}"
       - name: Upload scan output files
         uses: actions/upload-artifact@v4
         with:
-          name: scan-results-${{ matrix.batch }}-US-origin
+          name: scan-results-${{ matrix.batch }}-firefox-US-origin
           path: output
           retention-days: 15
 
@@ -88,7 +87,7 @@ jobs:
       matrix:
         batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
     runs-on: ubuntu-latest
-    name: Check EU origin server - batch ${{ matrix.batch }}
+    name: Check Firefox EU origin server - batch ${{ matrix.batch }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -99,13 +98,13 @@ jobs:
       - name: Run checker
         run: >
           python bin/scan_site.py
-          --sitemap-url="https://${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}/all-urls.xml"
+          --sitemap-url="https://${{ secrets.FXC_EU_ORIGIN_HOSTNAME }}/all-urls.xml"
           --maintain-hostname
           --batch="${{ matrix.batch }}"
       - name: Upload scan output files
         uses: actions/upload-artifact@v4
         with:
-          name: scan-results-${{ matrix.batch }}-EU-origin
+          name: scan-results-${{ matrix.batch }}-firefox-EU-origin
           path: output
           retention-days: 15
 
